--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -188,10 +188,10 @@ functions:
       where :math:`\mathbf{R}^{(B/I)}` denotes the rotation matrix from inertial to body-fixed frame, and :math:`\mathbf{R}_{z}` denotes a rotaion matrix about the z-axis.
 
       The matrix :math:`\mathbf{R}^{(B/I)}(t_{0})` is sometimes parameterized by pole right ascension and declination (:math:`\alpha` and :math:`\delta`), as well as the meridian of date :math:`W_{0}` with
- 
+
       .. math::
          \mathbf{R}^{(B/I)}(t_{0})=\mathbf{R}_{z}(W_{0})\mathbf{R}_{x}(\pi/2-\delta)\mathbf{R}_{z}(\pi/2+\alpha)
-     
+
     parameters:
       - name: base_frame # [py]
         type: str # [py]
@@ -424,7 +424,7 @@ functions:
          std::string targetFrame = "IAU_Earth"; # [cpp]
          // create rotation model settings and assign to body settings of "Earth" # [cpp]
          bodySettings[ "Earth" ]->rotationModelSettings = std::make_shared< RotationModelSettings >( spice_rotation_model, # [cpp]
-         	originalFrame, targetFrame ); # [cpp]
+                originalFrame, targetFrame ); # [cpp]
 
 
   #######################################################################
@@ -484,6 +484,30 @@ functions:
 
   #######################################################################
 
+  - name: constantRotationModelSettings # [cpp]
+    short_summary: "Factory function for creating simple rotation model settings for target-frames with constant orientation." # [cpp]
+    extended_summary: " Factory function for settings object, defining simple rotation model setting objects with constant rotation matrix. These model settings are for target frames which do not have a rotational rate in the base frame and are fully defined by their initial orientation. This function creates an instance of a `RotationModelSettings` derived `SimpleRotationModelSettings` object." # [cpp]
+
+    parameters: # [cpp]
+
+      - name: baseFrame # [cpp]
+        type: std::string # [cpp]
+        description: Name of the base frame of rotation model. # [cpp]
+
+      - name: targetFrame # [cpp]
+        type: std::string # [cpp]
+        description: Name of the target frame of rotation model. # [cpp]
+
+      - name: initialOrientation # [cpp]
+        type: Eigen::Quaterniond # [cpp]
+        description: Orientation of target frame in base frame at initial time (constant throughout). # [cpp]
+
+    returns: # [cpp]
+        type: SimpleRotationModelSettings # [cpp]
+        description: Simple rotation model settings object (derived from RotationModelSettings base class) with constant orientation of target in base frame. # [cpp]
+
+  #######################################################################
+
   - name: constant_rotation_model # [py]
   - name: constantRotationModelSettings # [cpp] # overload cpp
     short_summary: "Factory function for creating simple rotation model settings for target-frames with constant orientation."
@@ -536,50 +560,12 @@ functions:
 
 
 
-
- #######################################################################
-
-  - name: custom_rotation_model # [py]
-    short_summary: "Factory function for creating custom rotation model settings, where the rotation matrix is fully defined by a user-provided function"
-    extended_summary: |
-      Factory function for creating custom rotation model settings, where the rotation matrix :math:`\mathbf{R}^{(B/I)}(t)` from body-fixed to inertial frame 
-      is fully defined by a user-provided function. The derivative of this matrix (and derived from it; body angular velocity vectors) are computed by second
-      order central difference with a user-specified time step.
-
-    parameters:
-      - name: base_frame # [py]
-        type: str # [py]
-      - name: baseFrame # [cpp]
-        type: std::string # [cpp]
-        description: Name of the base frame of rotation model.
-
-      - name: target_frame # [py]
-        type: str # [py]
-      - name: targetFrame # [cpp]
-        type: std::string # [cpp]
-        description: Name of the target frame of rotation model.
-
-      - name: custom_rotation_matrix_function # [py]
-        type: Callable[[float], numpy.ndarray[numpy.float64[3, 3]]] # [py]
-        description: Function that returns the required rotation matrix from body-fixed to inertial frame as a function of time
-
-      - name: finite_difference_time_step # [py]
-        type: float # [py]
-        description: Time step that is to be used for central differencing of rotation matrix, when computing the rotation matrix derivative.
-
-
-
-    returns:
-        type: CustomRotationModelSettings
-        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.RotationModelSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.CustomRotationModelSettings` class,  which defines the required settings for the rotation model.
-
-
   #######################################################################
 
   - name: aerodynamic_angle_based # [py]
     short_summary: "Factory function for creating rotation model settings based on custom aerodynamic angles (attack, sideslip, bank)."
     extended_summary: |
-      Factory function for creating rotation model settings based on custom aerodynamic angles: 
+      Factory function for creating rotation model settings based on custom aerodynamic angles:
       angle of attack :math:`\alpha`, sideslip angle :math:`\beta` and bank angle :math:`\sigma`. The use of this function is typical for
       simulating the dynamics of a (guided) re-entry vehicle. It calculates the rotation matrix from inertial frame to the body-fixed frame
       of the current body B (typically a vehicle) w.r.t. the body-fixed frame of a central body C (e.g., the body at which the re-entry is taking place.
@@ -590,9 +576,9 @@ functions:
       * The rotation of the vehicle's trajectory frame T to its aerodynamic frame A. This rotation uses the current bank angle
       * The rotation of the vehicle's aerodynamic frame A to its body-fixed frame. This rotation uses the current angle of attack and sideslip angles
       In the above algorithm, the latitude, longitude, heading and flight-path angles are computed from the vehicle's current translational state, in the body-fixed
-      frame of body C. The angle of attack, sideslip angle and bank angle are to be defined by the user, through a single custom function that is passed to 
+      frame of body C. The angle of attack, sideslip angle and bank angle are to be defined by the user, through a single custom function that is passed to
       the `angle_funcion` argument of this functions
-      
+
 
     parameters:
       - name: central_body # [py]
@@ -627,10 +613,10 @@ functions:
     short_summary: "Factory function for creating rotation model settings based on an angle of attack calculated from pitch-trim, and custom aerodynamic angles sideslip, bank."
     extended_summary: |
       Factory function for creating rotation model settings based on an angle of attack calculated from pitch-trim, and custom aerodynamic angles sideslip, bank. This function is
-      largely identical to the `aerodynamic_angle_based`, with the difference that the angle of attack :math:`\alpha` is not provided as a custom value by the user, but is 
+      largely identical to the `aerodynamic_angle_based`, with the difference that the angle of attack :math:`\alpha` is not provided as a custom value by the user, but is
       calculated from the body's aerodynamic moment coefficients, such that we have :math:`C_{m}=0`. This requires aerodynamic moment coefficients to be defined for the vehicle that
       depend on (among others) the body's angle of attack
-      
+
 
     parameters:
       - name: central_body # [py]
@@ -659,24 +645,24 @@ functions:
         type: CustomRotationModelSettings
         description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.RotationModelSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.CustomRotationModelSettings` class, which defines the required settings for the rotation model.
 
-  ####################################################################### 
+  #######################################################################
 
 
   - name: custom_inertial_direction_based # [py]
-    short_summary: "Factory function for creating rotation model settings where the body-fixed z-axis is imposed to lie in a user-defined inertial direction"
+    short_summary: "Factory function for creating rotation model settings where the body-fixed x-axis is imposed to lie in a user-defined inertial direction"
     extended_summary: |
-      Factory function for creating rotation model settings where the body-fixed z-axis is imposed to lie in a user-defined inertial direction :math:`\hat{\mathbf{T}}_{I}`. Specifically, it ensures
-      that the rotation matrix from body-fixed to inertial frame is set up such that :math:`\hat{\mathbf{T}}_{I}=R^{(I/B)}\hat{\mathbf{k}}` (where :math:`\mathbf{k}` is the unit-vector in local z-direction).
-      The complete rotation matrix requires an additional angle :math:`\phi` (rotation of the body about its body-fixed z-axis), which is set to 0 by default. The full rotation matrix is computed from a 3-1--3 Euler angle rotation
-      :math:`R^{(I/B)=R_{z}(\psi)R_{x}(\theta)R_{z}(\phi)`, with :math:`\psi` and `\theta` computed from the suitable decomposition of :math:`\hat{\mathbf{T}}_{I}`.      
-      This function is typically used for simulating the (guided) dynamics of a spacecraft under thrust, where the thrust is provided in the z-direction of the body-fixed frame. By providing a suitable
+      Factory function for creating rotation model settings where the body-fixed x-axis is imposed to lie in a user-defined inertial direction :math:`\hat{\mathbf{T}}_{I}`. Specifically, it ensures
+      that the rotation matrix from body-fixed to inertial frame is set up such that :math:`\hat{\mathbf{T}}_{I}=R^{(I/B)}\hat{\mathbf{i}}` (where :math:`\mathbf{i}` is the unit-vector in local x-direction).
+      The complete rotation matrix requires an additional angle :math:`\phi` (rotation of the body about its body-fixed x-axis), which is set to 0 by default. The full rotation matrix is computed from a 3-2-1 Euler angle rotation
+      :math:`R^{(I/B)=R_{z}(\psi)R_{y}(\theta)R_{x}(\phi)`, with :math:`\psi` and `\theta` computed from the suitable decomposition of :math:`\hat{\mathbf{T}}_{I}`.
+      This function is typically used for simulating the (guided) dynamics of a spacecraft under thrust, where the thrust is provided in the x-direction of the body-fixed frame. By providing a suitable
       `inertial_body_axis_direction`, this thrust can be defined to point in an arbitrary direction (typically defined by a guidance algorithm) in the inertial frame as a function of time.
-      NOTE: this function may be extended in the future to allow an arbitrary body-fixed direction to align with an arbitrary inertial direction. At present, its functionality is limited to imposing the inertial direction of the body-fixed z-axis.
+      NOTE: this function may be extended in the future to allow an arbitrary body-fixed direction to align with an arbitrary inertial direction. At present, its functionality is limited to imposing the inertial direction of the body-fixed x-axis.
 
     parameters:
       - name: inertial_body_axis_direction # [py]
         type: Callable[[float], numpy.ndarray[numpy.float64[3, 1]]] # [py]
-        description: Custom function defined by the user, which imposes the inertial orientation of the body-fixed z-axis, by providing :math:`\hat{\mathbf{T}}_{I}(t)`.
+        description: Custom function defined by the user, which imposes the inertial orientation of the body-fixed x-axis, by providing :math:`\hat{\mathbf{T}}_{I}(t)`.
 
       - name: base_frame # [py]
         type: str # [py]
@@ -692,19 +678,19 @@ functions:
 
       - name: free_rotation_angle_function # [py]
         type: Callable[[float], float], default = None # [py]
-        description: Custom function provided by the user, which returns a value for the free rotation angle :math:`\phi` about the body-fixed z-axis as a function of time. If this input is left empty, this angle is fixed to 0.
+        description: Custom function provided by the user, which returns a value for the free rotation angle :math:`\phi` about the body-fixed x-axis as a function of time. If this input is left empty, this angle is fixed to 0.
 
     returns:
         type: BodyFixedDirectionBasedRotationSettings
         description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.RotationModelSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.BodyFixedDirectionBasedRotationSettings` class, which defines the required settings for the rotation model.
 
-  ####################################################################### 
+  #######################################################################
 
   - name: orbital_state_direction_based # [py]
-    short_summary: "Factory function for creating rotation model settings where the body-fixed z-axis is imposed to lie in the direction of a relative position or velocity vector."
+    short_summary: "Factory function for creating rotation model settings where the body-fixed x-axis is imposed to lie in the direction of a relative position or velocity vector."
     extended_summary: |
-      Factory function for creating rotation model settings where the body-fixed z-axis is imposed to lie in the direction of a relative position or velocity vector. This function is
-      similar to the `custom_inertial_direction_based` function, with the exception that the `\hat{\mathbf{T}}_{I}` vector is not defined by thee user, but is defined by the 
+      Factory function for creating rotation model settings where the body-fixed x-axis is imposed to lie in the direction of a relative position or velocity vector. This function is
+      similar to the `custom_inertial_direction_based` function, with the exception that the `\hat{\mathbf{T}}_{I}` vector is not defined by thee user, but is defined by the
       relative position vector :math:`\mathfbf{r}_{C}` or velocity vector :math:`\mathfbf{r}_{C}` of the vehicle w.r.t. some body C. The inputs to this function allow `\hat{\mathbf{T}}_{I}` to
       be set to :math:`\pm\mathfbf{r}_{C}` or :math:`\pm\mathfbf{v}_{C}`, for any body C. It is typically used for simplified or preliminary thrust analyses.
 
@@ -735,11 +721,11 @@ functions:
 
       - name: free_rotation_angle_function # [py]
         type: Callable[[float], float], default = None # [py]
-        description: Custom function provided by the user, which returns a value for the free rotation angle :math:`\phi` about the body-fixed z-axis as a function of time. If this input is left empty, this angle is fixed to 0.
+        description: Custom function provided by the user, which returns a value for the free rotation angle :math:`\phi` about the body-fixed x-axis as a function of time. If this input is left empty, this angle is fixed to 0.
 
     returns:
         type: BodyFixedDirectionBasedRotationSettings
         description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.RotationModelSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.rotation_model.BodyFixedDirectionBasedRotationSettings` class, which defines the required settings for the rotation model.
 
-  ####################################################################### 
-    
+  #######################################################################
+
